rearrange servlet